--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,21 @@
+on:
+  push:
+    branches:
+      - master
+    
+  
 
+
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
+
+    steps:
+      - name: 'Testing Github action'
+        run: pwd
+
+      - name: 'Testing printing'
+        run: echo yomna
+  
