--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,6 @@ jobs:
     
 
     steps:
-      - name: 'Testing Github action'
-        run: pwd
-
-      - name: 'Testing printing'
-        run: echo yomna
+      - name: 'printing folder contents'
+        run: ls
   
