--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,12 @@ jobs:
     
 
     steps:
-      - name: 'printing folder contents'
+      - name: 'Before'
         run: ls
+
+      - uses: actions/checkout@v3  
+
+      - name: 'After'
+        run: ls
+
   
