--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,10 @@ jobs:
     
 
     steps:
-      - name: 'Before'
-        run: ls
-
       - uses: actions/checkout@v3  
 
-      - name: 'After'
-        run: ls
+
+      - name: "Login to Docker hub"
+        run: docker login --username yomnaabdelgahfor --password dckr_pat_XtNGy2BOudNLhwsRGYbP__smPH4
 
   
