Added build and deploy steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,10 @@ jobs:
       - name: "Login to Docker hub"
         run: docker login --username ${{ secrets.DOCKER_NAME }} --password ${{ secrets.DOCKER_TOKEN }}
 
+      - name: "Building docker image"
+        run: docker build -t ${{ secrets.DOCKER_NAME }}/myimage .
+
+       - name: "Pushing to Docker hub"
+        run: docker push ${{ secrets.DOCKER_NAME }}/myimage
+
   
